sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:22: error: value !| is not a member of Boolean
	} while (!sorted !| ecart>=1)
                         ^